fix(API > Edit Album): Prevent word wrap

--- a/api/server/plugins/editAlbum/public/album.css
+++ b/api/server/plugins/editAlbum/public/album.css
@@ -14,7 +14,7 @@ textarea { width: 100%; height: 15%; }
 
 fieldset { height: 48%; padding: 1%; margin-bottom: 1%; background:#e9e9e9; outline: 1px solid #bbb; }
 legend { font-size:1.1em; padding:.4em .8em; background:#fff; border:1px solid #bbb; }
-fieldset > p label { display: inline-block; line-height:2em; margin-right:3%; text-align:right; width:28%; }
+fieldset > p label { display: inline-block; line-height:2em; margin-right:3%; text-align:right; width:50%; }
 fieldset > p input[type=text] { width:60%; }
 fieldset > p input[type=text].half { width:29.4%; }
 fieldset > input { margin-left:35%; }
